fix(scroller): handle horizontal and cross browsers overflow anchor

--- a/projects/ngx-uic/scroller/src/components/scroller/scroller.component.scss
+++ b/projects/ngx-uic/scroller/src/components/scroller/scroller.component.scss
@@ -1,4 +1,4 @@
 :host {
-    position: relative;
     overflow: auto;
+    overflow-anchor: none;
 }
